--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "tunde usman",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
