--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.0",
+    "multer": "^1.4.2",
+    "sharp": "^0.23.0",
     "validator": "^11.1.0"
   },
   "devDependencies": {
