--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "tunde usman",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
