connected the backend with front-end

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "env-cmd nodemon backend/server",
-    "client": "npm start --prefix client"
+    "client": "npm start --prefix client",
+    "dev": "concurrently --kill-others \"npm run client\" \"npm run server\" "
   },
   "author": "tunde usman",
   "license": "MIT",
@@ -21,7 +22,7 @@
     "validator": "^11.1.0"
   },
   "devDependencies": {
-    "concurrency": "^0.1.4",
+    "concurrently": "^4.1.2",
     "env-cmd": "^10.0.1",
     "nodemon": "^1.19.2"
   }
