enabled user edit status

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "env-cmd nodemon backend/server",
     "client": "npm start --prefix client",
-    "dev": "concurrently --kill-others \"npm run client\" \"npm run server\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "author": "tunde usman",
   "license": "MIT",
