--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "draft-js": "^0.11.1",
     "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "jspdf": "^1.5.3",
