--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "draft-js": "^0.11.1",
+    "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "jspdf": "^1.5.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-helmet-async": "^1.0.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
