set for production

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "portfolio webapp",
   "main": "index.js",
   "scripts": {
+    "start": "node backend/server",
     "server": "env-cmd nodemon backend/server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "tunde usman",
   "license": "MIT",
